--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,8 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  font-family: "Crimson text", serif;
+  line-height: 1.3;
 
   color: #222;
 }
@@ -18,32 +20,116 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
+
 article {
   max-width: 43em;
+  margin: 0 1em;
 }
 
 article h1 {
   font-weight: normal;
+  margin-bottom: 0;
 }
 
 article header {
   border-bottom: 1px solid #999;
+  margin-bottom: 1.3rem;
 }
 
 article header p {
   font-style: italic;
+  margin-top: 0;
+  padding-bottom: 1.3rem;
+}
+
+article p {
+  padding-bottom: 1.3rem;
+  margin: 0;
+}
+
+article > p:first-child {
+  padding-top: 1.3rem;
+}
+
+
+article ol {
+  padding-left: 1rem;
 }
 
 article > p:last-child {
   border-bottom: 1px solid #999;
+  padding-bottom: 1.3rem;
+}
+
+article li {
+  margin: 0;
 }
 
 blockquote {
   max-width: 24em;
   color: #555;
   font-size: 1.125rem;
+  margin: 0 auto 1.3rem;
 }
 
 .quote {
   color: #999;
+}
+
+@media only screen and (min-width: 38em) {
+  html {
+    line-height: 1.4;
+    font-size: 110%;
+  }
+
+  article header {
+    margin-bottom: 1.4rem;
+  }
+
+  article p {
+    padding-bottom: 1.4rem;
+  }
+
+  article > p:first-child {
+    padding-top: 1.4rem;
+  }
+
+  article > p:last-child {
+    padding-bottom: 1.4rem;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+  html {
+    line-height: 1.5;
+    font-size: 120%;
+  }
+
+  article header {
+    margin-bottom: 1.5rem;
+  }
+
+  article p {
+    padding-bottom: 1.5rem;
+  }
+
+  article > p:first-child {
+    padding-top: 1.5rem;
+  }
+
+  article > p:last-child {
+    padding-bottom: 1.5rem;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+  html {
+    font-size: 130%;
+  }
+
 }
