--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: "Crimson text", serif;
+  font-family: "Crimson Text", serif;
   line-height: 1.3;
 
   color: #222;
@@ -79,6 +79,7 @@ blockquote {
 }
 
 @media only screen and (min-width: 38em) {
+
   html {
     line-height: 1.4;
     font-size: 110%;
@@ -103,6 +104,7 @@ blockquote {
 }
 
 @media only screen and (min-width: 60em) {
+
   html {
     line-height: 1.5;
     font-size: 120%;
@@ -127,6 +129,7 @@ blockquote {
 }
 
 @media only screen and (min-width: 90em) {
+
   html {
     font-size: 130%;
   }
